examples/ingress-after.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  labels:
    app: sample
    managed-by: aws-lb-controller
  annotations:
    "alb.ingress.kubernetes.io/ssl-policy": ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09
spec:
  rules: []
